Uncomment image and description

--- a/example1/index.html
+++ b/example1/index.html
@@ -6,14 +6,14 @@
     <!-- everything that isn't content -->
     <head>
         <meta charset="utf-8">
-        <title>Example 1</title>
+        <title>Dolphin Park</title>
 
         <!-- css -->
         <style>
             /* uncomment to change default font */
-            /* html {
+            html {
                 font-family: sans-serif;
-            } */
+            }
 
             img {
                 width: 512px; /* set image width */
@@ -36,11 +36,18 @@
         <!-- an image -->
         <img id="myImage"
              alt="Black hole - Messier 87 crop max res"
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Black_hole_-_Messier_87_crop_max_res.jpg/1024px-Black_hole_-_Messier_87_crop_max_res.jpg">
+             src="https://images.squarespace-cdn.com/content/v1/5875a5aa20099e0e1263237b/1507735091545-SWDKKQHKVMYLARGT2T66/ke17ZwdGBToddI8pDm48kMMrhUZ3rQXTcnRxiSGi1G17gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmaUzSiviepfuOufnJa7SEDRKl7z_LUwe8cDB0iQ_YpMlSenNy3wuK8-Q9DCm8gcSo/7.jpg?format=500w">
 
         <!-- a caption -->
         <p id="caption">
-            The Event Horizon Telescope (EHT) — a planet-scale array of eight ground-based radio telescopes forged through international collaboration — was designed to capture images of a black hole. In coordinated press conferences across the globe, EHT researchers revealed that they succeeded, unveiling the first direct visual evidence of the supermassive black hole in the centre of Messier 87 and its shadow.
+            DOLPHIN PARK MASTERPLANS, 2014, MELBOURNE, AUSTRALIA
+“We stop projecting our ourselves and desires onto the bush. Instead, Australians should try to understand it as it is, and as it can be, while also owning upto the damage they have done to it, as well as to the people their ancestors found there.” The Bush, Don Watson
+
+In the same way Don Watson describes The Bush and the Australian people’s relationship with it, this masterplan for a Dolphin Park explores the stories we like to tell ourselves about the Dol- phins and those we prefer to forget. There is a lot about the beauty of the Dolphin, the loss of it, and what we can do to get it back. It is about us acknowledging our wrongdoing to the Dolphins.
+
+The journey across the land is carefully curated to remind visitors of the stories of the past, both with their relationship with the land, the people, the animals (dolphins in this case) and life itself. It is about rediscovering all of these with new light, with hope and with optimism to make clear what our identity is as a race as well as a nation. 
+
+Visitors experience with the Dolphin change as they move though the park tapping into the various senses. Within the park are other amenities such as an amphitheatre, water treatment plant, an educational centre, a sanatorium and a research laboratory. The last two programs explores the idea of Dolphin Therapy and how we as a species can benefit from the Dolphins in an ethical and just manner..
         </p>
 
         <!-- javascript -->
